[gd_scene load_steps=4 format=2]

[ext_resource path="res://controlDots.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="playerSprite" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="controlDots" type="Node2D" parent="playerSprite"]
position = Vector2( 1.14441e-05, 0.199997 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )

[node name="controlDotTemplate" type="Node2D" parent="playerSprite/controlDots"]

[node name="offsetADot" type="Node2D" parent="playerSprite/controlDots/controlDotTemplate"]
position = Vector2( 300, 0 )
scale = Vector2( 0.3, 0.3 )

[node name="aDot" type="Polygon2D" parent="playerSprite/controlDots/controlDotTemplate/offsetADot"]
position = Vector2( -25, -75 )
antialiased = true
polygon = PoolVector2Array( 0, 0, 50, 0, 100, 50, 100, 100, 50, 150, 0, 150, -50, 100, -50, 50 )

[node name="playerShape" type="Polygon2D" parent="playerSprite"]
position = Vector2( -99.6, -37 )
scale = Vector2( 0.3, 0.3 )
color = Color( 0.0745098, 0.368627, 0.0352941, 1 )
polygon = PoolVector2Array( 192, 64, 384, 64, 384, 0, 512, 128, 384, 256, 384, 192, 192, 192 )
